--- a/template/pyproject.toml.jinja
+++ b/template/pyproject.toml.jinja
@@ -1,12 +1,89 @@
+[project]
+name = "{{plugin_name}}"
+dynamic = ["version"]
+description = "{{short_description}}"
+readme = "README.md"
+license = {file = "LICENSE"}
+authors = [
+  {name = "{{full_name}}"},
+  {email = "{{email}}"},
+]
+classifiers = [
+    "Development Status :: 2 - Pre-Alpha",
+    "Framework :: napari",
+    "Intended Audience :: Developers",
+    {% if license == "MIT" -%}
+    "License :: OSI Approved :: MIT License",
+    {%- elif license == "BSD-3" -%}
+    "License :: OSI Approved :: BSD License",
+    {%- elif license == "GNU GPL v3.0" -%}
+    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
+    {%- elif license == "GNU LGPL v3.0" -%}
+    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
+    {%- elif license == "Apache Software License 2.0" -%}
+    "License :: OSI Approved :: Apache Software License",
+    {%- elif license == "Mozilla Public License 2.0" -%}
+    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
+    {%- endif %}
+    "Operating System :: OS Independent",
+    "Programming Language :: Python",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3 :: Only",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Topic :: Scientific/Engineering :: Image Processing",
+]
+requires-python = ">=3.8"
+dependencies = [
+    "numpy",
+{% if include_widget_plugin %}    "magicgui",
+    "qtpy",
+    "scikit-image",
+{% endif %}]
+
+[project.optional-dependencies]
+testing = [
+    "tox",
+    "pytest",  # https://docs.pytest.org/en/latest/contents.html
+    "pytest-cov",  # https://pytest-cov.readthedocs.io/en/latest/
+{% if include_widget_plugin %}    "pytest-qt",  # https://pytest-qt.readthedocs.io/en/latest/
+    "napari",
+    "pyqt5",
+{% endif %}]
+
+[project.entry-points."napari.manifest"]
+{{plugin_name}} = "{{module_name}}:napari.yaml"
+
+{% if github_repository_url != 'provide later' -%}
+[project.urls]
+"Bug Tracker" = "https://github.com/{{cookiecutter.github_username_or_organization}}/{{cookiecutter.plugin_name}}/issues"
+"Documentation" = "https://github.com/{{cookiecutter.github_username_or_organization}}/{{cookiecutter.plugin_name}}#README.md"
+"Source Code" = "https://github.com/{{cookiecutter.github_username_or_organization}}/{{cookiecutter.plugin_name}}"
+"User Support" = "https://github.com/{{cookiecutter.github_username_or_organization}}/{{cookiecutter.plugin_name}}/issues"
+{%- endif %}
+
 [build-system]
-{% if use_git_tags_for_versioning and plugin_name != "foo-bar" -%}
+{% if use_git_tags_for_versioning -%}
 requires = ["setuptools>=42.0.0", "wheel", "setuptools_scm"]
 {%- else -%}
 requires = ["setuptools>=42.0.0", "wheel"]
 {%- endif %}
 build-backend = "setuptools.build_meta"
 
-{% if use_git_tags_for_versioning and plugin_name != "foo-bar" %}
+[tool.setuptools]
+include-package-data = true
+
+[tool.setuptools.dynamic]
+version = {attr = "{{module_name}}._version.__version__"}
+
+[tool.setuptools.packages.find]
+where = ["src"]
+
+[tool.setuptools.package-data]
+"*" = ["*.yaml"]
+
+{% if use_git_tags_for_versioning %}
 [tool.setuptools_scm]
 write_to = "src/{{module_name}}/_version.py"
 {%- endif %}
@@ -14,7 +91,6 @@ write_to = "src/{{module_name}}/_version.py"
 [tool.black]
 line-length = 79
 target-version = ['py38', 'py39', 'py310']
-
 
 [tool.ruff]
 line-length = 79
